--- a/.github/workflows/code-quality-and-security.yml
+++ b/.github/workflows/code-quality-and-security.yml
@@ -17,7 +17,7 @@ jobs:
 
       # Step 2: Scan repository for malware with ClamAV
       - name: Scan for Malware with ClamAV
-        uses: check-spdx/clamav-scan@v1
+        uses: move-fast/clamav-scan-action@main
 
       # Step 3: Set up Python environment
       - name: Set up Python
