--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -102,6 +102,16 @@ jobs:
           pip install -r requirements.txt
         shell: cmd
 
+      - name: Scan built executable for malware
+        run: |
+          # Use Chocolatey package manager to install ClamAV on Windows
+          choco install clamav
+          # Update the virus definitions
+          C:\ProgramData\chocolatey\lib\clamav\tools\freshclam.exe
+          # Scan the specific build output directory
+          C:\ProgramData\chocolatey\lib\clamav\tools\clamscan.exe -r "build/windows"
+        shell: powershell
+
       - name: Build executable with Nuitka
         run: |
           mkdir build
